# rmcs_auto_aim_v2

./: .clang-format  .gitignore  .gitmodules  AGENTS.md  CMakeLists.txt  README.md  package.xml  plugins.xml
.github/workflows/: gtest.yml
config/: config.yaml  executor.yaml
doc/: hikcamera.md  rclcpp.md  streaming.md  utility.md
launch/: launch.py
src/: component.cpp  rmcs_auto_aim_v2.cpp  runtime.cpp
src/adapter/: adapter.hpp  sentry.hpp
src/config/: capturer.hpp  config.hpp  threads.cpp  threads.hpp
src/io/capturer/: capturer.cpp  hikcamera.hpp  imu_snapshot_buffer.hpp  linear_sync_model.hpp
src/io/recorder/: player.cpp  recorder.cpp  video_player.cpp
src/kernel/: auto_aim.cpp  auto_aim.hpp  capturer.config.hpp  capturer.cpp  capturer.hpp  common.hpp  concept.hpp  control_system.cpp  control_system.hpp  detector.cpp  detector.hpp  feishu.cpp  feishu.hpp  fire_control.cpp  fire_control.hpp  identifier.config.hpp  identifier.cpp  identifier.hpp  kernel.config.hpp  kernel.cpp  kernel.hpp  kernel.impl.hpp  kernel.util.hpp  pose_estimator.cpp  pose_estimator.hpp  tracker.cpp  tracker.hpp  transform_tree.hpp  transmit.hpp  visualization.config.hpp  visualization.cpp  visualization.hpp
src/kernel/utility/: duck_type.hh  duck_type.hpp  memory_share.hpp
src/module/capturer/: common.hpp  hikcamera.cpp  hikcamera.hpp  local_video.cpp  local_video.hpp  runtime.cpp
src/module/debug/: action_throttler.hpp  framerate.hpp  recorder.hpp
src/module/detector/: adjacency_lightbar.cpp  armor_detection.cpp  armor_detection.hpp  green_light.cpp  green_light.hpp  rune.cpp  rune.hpp
src/module/fire_control/: aim_point_chooser.cpp  aim_point_chooser.hpp  armor_selector.cpp  armor_selector.hpp  gimbal_state.hpp  mpc_trajectory_planner.cpp  mpc_trajectory_planner.hpp  shoot_evaluator.cpp  shoot_evaluator.hpp  target_solver.cpp  target_solver.hpp  tiny_mpc_axis_solver.cpp  trajectory_solution.cpp  trajectory_solution.hpp  trajetory_solver.cpp  types.hpp
src/module/identifier/: adjacency_lightbar.cpp  adjacency_lightbar.hpp  armor.hpp  armor_detection.cpp  armor_detection.hpp  buff_detection.cpp  buff_detection.hpp  green_light.cpp  green_light.hpp  green_light_armor_filter.cpp  green_light_armor_filter.hpp  green_light_detection.cpp  green_light_detection.hpp  green_light_locator.cpp  green_light_locator.hpp  lightbar.cpp  lightbar.hpp  model.cpp  model.hpp  preprocess.cpp  preprocess.hpp
src/module/perception/: rotation_estimator.cpp  rotation_estimator.hpp
src/module/pose_estimator/: pnp_solution.cpp  pnp_solution.hpp  refine_strategy.hpp
src/module/predictor/: buff_ekf_parameter.hpp  clockwise_voter.hpp  ekf_parameter.hpp  outpost_ekf_parameter.hpp  outpost_robot_state.cpp  outpost_robot_state.hpp  outpost_state.cpp  outpost_state.hpp  power_rune.cpp  power_rune.hpp  power_rune_data_association.hpp  power_rune_snapshot.cpp  power_rune_snapshot.hpp  regular_robot_state.cpp  regular_robot_state.hpp  robot_state.cpp  robot_state.hpp  snapshot.cpp  snapshot.hpp  trackable.hpp
src/module/tracker/: armor_filter.cpp  armor_filter.hpp  decider.cpp  decider.hpp  state.cpp  state.hpp  trackable.hpp
src/modules/capturer/: common.hpp  hikcamera.cpp  hikcamera.hpp  runtime.cpp  runtime.hpp  video.cpp  video.hpp
src/modules/debug/: framerate.hpp  recorder.hpp  visualization.hpp
src/modules/identifier/: armor.hpp  model.cpp  model.hpp
src/utility/: acsii_art.hpp  clock.hpp  details.hpp  directory.hpp  duck_type.hpp  framerate.hpp  image.cpp  image.details.hpp  image.hpp  image.impl.hpp  linear.hpp  logging_util.hpp  monostate.hpp  node.hpp  panic.cpp  panic.hpp  pimpl.hpp  rclcpp.hpp  repeat.hpp  serializable.hpp  service.hpp  static_tf.hpp  string.hpp  tf.cpp  tf.hpp  time.hpp  times_limit.hpp  trait.hpp
src/utility/control/: tiny_mpc_solver.hpp
src/utility/coroutine/: channel.hpp  common.hpp
src/utility/csv/: csv_reader.hpp
src/utility/image/: armor.cpp  armor.hpp  drawable.cpp  drawable.hpp  green_light.cpp  green_light.hpp  image.cpp  image.hpp  process.cpp  process.hpp  recorder.cpp  recorder.hpp  text.cpp  text.hpp
src/utility/logging/: eigen.hpp  printer.cpp  printer.hpp
src/utility/math/: angle.hpp  camera.cpp  camera.hpp  conversion.hpp  corners_optimizor.cpp  corners_optimizor.hpp  eigen.hpp  hungarian.hpp  linear.hpp  mahalanobis.hpp  outpost.cpp  outpost.hpp  point.hpp  reprojection.cpp  reprojection.hpp  robot.cpp  robot.hpp  sigmoid.hpp  solve_armors.cpp  solve_armors.hpp  solve_pnp.cpp  solve_pnp.hpp  tiny_mpc_solver.hpp
src/utility/model/: armor_detection.hpp  common_model.hpp
src/utility/rclcpp/: configuration.hpp  node.cpp  node.details.hpp  node.hpp  param_adapter.hpp  parameters.cpp  parameters.hpp  visualization.cpp  visualization.hpp
src/utility/robot/: aimpoint.hpp  armor.hpp  color.hpp  constant.hpp  fan_blade.hpp  id.hpp  power_rune_mode.hpp  priority.hpp  rune.hpp  target_mode.hpp
src/utility/shared/: client.hpp  context.hpp  interprocess.hpp
src/utility/singleton/: running.cpp
src/utility/tf/: static_tf.hpp
test/: CMakeLists.txt  action_throttler.cpp  aim_point_chooser.cpp  asset.yml  assets_manager.hpp  convertion.cpp  device_id.cpp  download_assets.sh  duck_type.cpp  feishu_test.cpp  hikcamera.cpp  image_recorder.cpp  interprocess.cpp  model_infer.cpp  pipeline.cpp  repeat.cpp  rune.cpp  rune_feature_identifier.cpp  rune_preprocessor.cpp  serializable.cpp  solve_pnp.cpp  static_tf.cpp  streaming.cpp  test.cmake  tf.cpp  timestamp_alignment.cpp  tiny_mpc_axis_solver.cpp  tiny_mpc_solver.cpp  tracker_decider.cpp  transform_communication.cpp  visualization.cpp
tool/: CMakeLists.txt  calibration_collector.cpp  install-server.sh  rune_preprocess_visualizer.cpp  visualization.cpp
tool/calibration/: camera_calibration.cpp  handeye_calibration.cpp
tool/cxx/: CMakeLists.txt  hikcamera.cpp  hikcamera_test.cpp  ov_model_status.cpp  rotation_estimator.cpp  see_outpost.cpp  test_outpost_ekf.cpp  test_robot_ekf.cpp  test_rune_ekf.cpp  visualization.cpp
tool/res/: mediamtx.yml  playing.html  start-streamer
(+105 files in other folders)
